--- a/index.html
+++ b/index.html
@@ -1,15 +1,49 @@
-<!DOCTYPE html>
-
+<!doctype html>
 <html>
-<head>
-  <title>temp</title>
+  <head>
+    <title>NoiseTwitter</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
+  </head>
+  <body>
+    <form class="tweetbox clearfix">
+      <textarea name="tweet-content" placeholder="Compose new Tweet..."></textarea>
+      <input type="submit" value="Tweet">
+      <div class="tweet-counter">140</div>
+    </form>
+    <section class="tweets">
+      <article class="tweet clearfix">
+        <a href="http://twitter.com/JeffreyATW" class="avatar">
+          <img src="avatar.jpg" alt="JeffreyATW">
+        </a>
+        <div class="tweet-details">
+          <small class="time">1h</small>
+          <a href="http://twitter.com/JeffreyATW" class="author">JeffreyATW</a>
+          <p class="tweet-content">You give love a bad name.</p>
+        </div>
+      </article>
+      <article class="tweet clearfix">
+        <a href="http://twitter.com/JeffreyATW" class="avatar">
+          <img src="avatar.jpg" alt="JeffreyATW">
+        </a>
+        <div class="tweet-details">
+          <small class="time">2h</small>
+          <a href="http://twitter.com/JeffreyATW" class="author">JeffreyATW</a>
+          <p class="tweet-content">Old McDonald had a farm.</p>
+        </div>
+      </article>
+      <article class="tweet clearfix">
+        <a href="http://twitter.com/JeffreyATW" class="avatar">
+          <img src="avatar.jpg" alt="JeffreyATW">
+        </a>
+        <div class="tweet-details">
+          <small class="time">3h</small>
+          <a href="http://twitter.com/JeffreyATW" class="author">JeffreyATW</a>
+          <p class="tweet-content">I'm a little teapot, short and stout.</p>
+        </div>
+      </article>
+    </section>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+      <script src="script.js"></script>
 
-  <link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-  <div id="greeting"></div>
-
-  <script src="main.js"></script> 
-</body>
+  </body>
 </html>
