--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
           <a href="http://twitter.com/JeffreyATW" class="author">JeffreyATW</a>
           <p class="tweet-content">You give love a bad name.</p>
         </div>
+        <button class="favorite"> Favorite</button> 
+        <button class="retweet"> retweet</button> 
       </article>
       <article class="tweet clearfix">
         <a href="http://twitter.com/JeffreyATW" class="avatar">
